--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 header{
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background-image: url(./img.png/Rectangle\ 47.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -21,7 +21,7 @@ nav{
 .middle-nav{
     display: flex;
     color: white;
-    font-size: 20px;
+    font-size: 22px;
     gap: 50px;
 }
 .right-nav{
@@ -33,7 +33,7 @@ nav{
     align-items: center;
     color: white;
     gap: 10px;
-    font-size: 20px;
+    font-size: 22px;
 }
 .middle-header{
     margin-top: 230px;
@@ -48,7 +48,7 @@ nav{
 .middle-header p{
     margin-top: 30px;
     color: #D2D2D2;
-    font-size: 20px;
+    font-size: 24px;
     width: 40%;
 }
 .middle-header button{
@@ -67,7 +67,50 @@ nav{
 .but-img img{
     margin-right: 70px;
 }
-
+section{
+    padding: 100px 5%;
+    background-color: rgba(104, 104, 104, 1);
+}
+section h2{
+    color: white;
+    font-size: 44px;
+}
+section p{
+    color: rgba(210, 210, 210, 1);
+    width: 30%;
+    font-size: 20px;
+    margin-top: 20px;
+}
+article{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 9%;
+}
+.box{
+    margin-top: 50px;
+    width: 23%;
+    padding: 50px 2%;
+    background-color: rgba(83, 83, 83, 1);
+    border-top-right-radius:100px;
+}
+.box img{
+    width: 80%;
+}
+.box h3{
+    width: 100%;
+    color: white;
+    font-size: 32px;
+}
+.box p{
+    width: 90%;
+}
+.box button{
+    margin-top: 20px;
+    border: none;
+    padding: 15px 30px;
+    background-color: rgba(14, 158, 47, 1);
+    color: white;
+}
 
 
 
@@ -97,7 +140,7 @@ nav{
         background-position:90% ;
     }
     .middle-header{
-        margin-top: 150px;
+        margin-top: 100px;
         margin-left: 35px;
     }
     .middle-header h2{
@@ -118,5 +161,26 @@ nav{
     .but-img button{
         width: 90%;
     }
+    section h2{
+        width: 90%;
+        padding: 0 5%;
+    }
+    section p{
+        width: 90%;
+        padding: 0 5%;
+    }
+    .arrows{
+        display: flex;
+        justify-content: right;
+        margin-top: 20px;
+    }
+    article{
+        overflow: scroll;
+        flex-wrap: nowrap;
+    }
+    .box{
+        min-width: 98%;
+    }
+    
 
 }
