--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 header{
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-image: url(./img.png/Rectangle\ 47.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,14 +15,14 @@ nav{
     padding: 30px;
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 50px;
     align-items: center;
 }
 .middle-nav{
     display: flex;
     color: white;
-    font-size: 22px;
-    gap: 50px;
+    font-size: 20px;
+    gap: 20px;
 }
 .right-nav{
     display: flex;
@@ -33,7 +33,7 @@ nav{
     align-items: center;
     color: white;
     gap: 10px;
-    font-size: 22px;
+    font-size: 20px;
 }
 .middle-header{
     margin-top: 230px;
@@ -111,6 +111,44 @@ article{
     background-color: rgba(14, 158, 47, 1);
     color: white;
 }
+.hh2{
+    text-align: center;
+    margin-top: 100px;
+    font-size: 48px;
+}
+.text-img{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.left-text{
+    width: 40%;
+}
+.left-text h3{
+    color: rgba(14, 158, 47, 1);
+    font-size: 32px;
+}
+.left-text p{
+    margin-top: 20px;
+    width: 60%;
+    color: rgba(146, 147, 143, 1);
+}
+.right-img{
+    width: 40%;
+}
+.right-img img{
+    width: 100%;
+}
+.three-img{
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 3%;
+}
+.three-img img{
+    width: 25%;
+}
 
 
 
@@ -181,6 +219,54 @@ article{
     .box{
         min-width: 98%;
     }
-    
+    .text-img{
+        flex-direction: column;
+    }
+    .left-text{
+        width: 100%;
+    }
+    .left-text p, h3{
+        width: 90%;
+        padding: 5%;
+        margin-top: 0px;
+    }
+    .text-img{
+        margin-top: 0px;
+    }
+    .three-img img{
+    width: 90%;
+    padding: 0 5%;
+}
+    .right-img{
+    width: 100%;
+   }
+   .right-img img{
+    width: 90%;
+    padding: 0 5%;
+   }
+   .text-img button{
+    width: 90%; 
+    border: none;
+    padding:15px 20px;
+    color: white;
+    text-align: start;
+    background-color: rgba(14, 158, 47, 1);
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 50px;
+   }
+   .pp p{
+    width: 90%;
+    padding: 0 5%;
+    margin-top: 20px;
+    color: rgba(146, 147, 143, 1);
+   }
+   .pp h3{
+    margin-top: 50px;
+    color: rgba(146, 147, 143, 1);
+    font-size: 32px;
+    width: 80%;
+    padding: 0 5%;
+   }
 
 }
