--- a/style.css
+++ b/style.css
@@ -149,6 +149,60 @@ article{
 .three-img img{
     width: 25%;
 }
+.width80{
+    width: 80%;
+    margin: auto;
+}
+.building{
+    margin-top: 100px;
+    width: 100%;
+    height: 80vh;
+    background-image: url(./img.png/Вход-1\ 1\ \(1\).jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.all{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 110px;
+}
+.left-buil{
+    width: 40%;
+}
+.left-buil h2{
+    color: white;
+    font-size: 48px;
+    width: 80%;
+    margin-bottom:40px ;
+}
+.photo-img{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    color: rgba(14, 158, 47, 1);
+    margin-bottom: 40px;
+}
+.par{
+    color: rgba(210, 210, 210, 1);
+    width: 50%;
+}
+.right-buil{
+    background-color: rgba(14, 158, 47, 1);
+    width: 30%;
+    padding:0 50px;
+    border-top-right-radius: 20%;
+}
+.right-buil h4, p{
+    color: white;
+}
+.right-buil h4 {
+    font-size: 24px;
+    margin-bottom: 15px;
+    margin-top :50px;
+}
+.green-p{
+    color: rgba(14, 158, 47, 1);
+}
 
 
 
@@ -268,5 +322,33 @@ article{
     width: 80%;
     padding: 0 5%;
    }
-
+   .all{
+    flex-direction: column;
+   }
+   .width80{
+    width: 100%;
+   }
+   .building{
+    height: 100vh;
+   }
+   .left-buil{
+    width: 100%;
+   }
+   .left-buil h2{
+    font-size: 40px;
+    width: 80%;
+    margin: auto;
+   }
+.photo-img{
+    justify-content: center;
+    margin-top: 30px;
+}
+.par{
+    width: 70%;
+    margin: auto;
+}
+.right-buil{
+    width: 76.2%;
+    margin-top: 50px;
+}
 }
