--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 header{
     width: 100%;
     height: 100vh;
-    background-image: url(./img.png/Rectangle\ 47.jpg);
+    background-image: url(./img.png/Rectangle\ 471.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -228,6 +228,14 @@ article{
     width: 80%;
     padding: 0 10%;
     margin: auto;
+}
+.back-img{
+    margin-top: 100px;
+    width: 100%;
+    height: 50vh;
+    background-image: url(./img.png/Rectangle\ 47.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
