--- a/style.css
+++ b/style.css
@@ -295,7 +295,29 @@ article{
     margin-top: 10px;
     color: rgb(91, 118, 20);
 }
-
+.back-img2{
+    margin-top: 50px;
+    width: 100%;
+    height: 50vh;
+    background-image: url(./img.png/unsplash_0RDBOAdnbWM.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.back-img2 h3{
+    color: white;
+    text-align: center;
+    padding-top: 100px;
+    font-size: 36px;
+}
+.back-img2 button{
+    width: 80%;
+    border: none;
+    color: white;
+    padding: 15px;
+    background-color: rgba(14, 158, 47, 1);
+    margin-left: 45px;
+    margin-top: 50px;
+}
 
 
 
