--- a/style.css
+++ b/style.css
@@ -358,7 +358,63 @@ article{
     width: 80%;
     font-size: 24px;
 }
-
+.back-img3{
+    margin-top: 100px;
+    width: 100%;
+    height: 80vh;
+    background-image: url(./img.png/tod-s-lgnEI45raTI-unsplash.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.all2{
+    display: flex;
+    padding: 100px 50px;
+}
+.last-left h2{
+    color: white;
+    font-size: 48px;
+    width: 50%;
+}
+.last-left p{
+    width: 30%;
+    color: rgba(210, 210, 210, 1);
+    margin-top: 20px;
+}
+.last2{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.last2 p{
+    width: 40%;
+}
+.last2 img{
+    border: 1px solid rgba(14, 158, 47, 1);
+    border-radius: 50%;
+    padding: 15px;
+}
+.all3{
+    margin-top: 50px;
+    display: flex;
+}
+.last-right{
+    width: 30%;
+    background-color: rgba(14, 158, 47, 1);
+    padding: 50px 30px;
+}
+.in1{
+    margin-top: 10px;
+    padding: 10px;
+    width: 90%;
+}
+.two-in{
+    margin-top: 20px;
+    display: flex;
+}
+.two-in .l1{
+    color: white;
+    display: block;
+}
 
 
 
